@startuml
namespace johnny {
    class AmountDiscount << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class AmountTax << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class AmountUndiscount << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class AmountUntax << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    interface Arithmetic  {
        + Add( alpacadecimal.Decimal) 
        + Sub( alpacadecimal.Decimal) 
        + Mul( alpacadecimal.Decimal) 
        + Div( alpacadecimal.Decimal) 

    }
    class DefaultJohnny << (S,Aquamarine) >> {
        - value alpacadecimal.Decimal

        - set(buffer alpacadecimal.Decimal) 

        + Value() alpacadecimal.Decimal
        + Add(v alpacadecimal.Decimal) 
        + Sub(v alpacadecimal.Decimal) 
        + Mul(v alpacadecimal.Decimal) 
        + Div(v alpacadecimal.Decimal) 
        + Reset() 
        + String() string
        + Bind(e Visitor) 
        + Snapshot() alpacadecimal.Decimal
        + Restore(s alpacadecimal.Decimal) 

    }
    class Discount << (S,Aquamarine) >> {
        - ratio alpacadecimal.Decimal
        - amount alpacadecimal.Decimal

        + Ratio() alpacadecimal.Decimal
        + Amount() alpacadecimal.Decimal
        + String() string

    }
    class DiscountHandler << (S,Aquamarine) >> {
        - totalRatio alpacadecimal.Decimal
        - totalAmount alpacadecimal.Decimal
        - discountable alpacadecimal.Decimal

        + WithPercentualDiscount(value alpacadecimal.Decimal) 
        + WithAmountDiscount(value alpacadecimal.Decimal) 

    }
    class DiscountHandlerFromUnitValue << (S,Aquamarine) >> {
        + Do(b Johnny) 
        + Discountable() alpacadecimal.Decimal
        + TotalRatio() alpacadecimal.Decimal
        + TotalAmount() alpacadecimal.Decimal

    }
    interface Johnny  {
        - set( alpacadecimal.Decimal) 

        + Bind( Visitor) 
        + String() string
        + Value() alpacadecimal.Decimal
        + Reset() 
        + Snapshot() alpacadecimal.Decimal
        + Restore( alpacadecimal.Decimal) 

    }
    class FromBrute << (S,Aquamarine) >> {
        + WithBrute(brute alpacadecimal.Decimal) *FromBrute

    }
    class FromUnitValue << (S,Aquamarine) >> {
    }
    class PercTax << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class PercentualDiscount << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class PercentualUndiscount << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class PercentualUntax << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class Qty << (S,Aquamarine) >> {
        - qty alpacadecimal.Decimal

        + Do(b Johnny) 

    }
    class Round << (S,Aquamarine) >> {
        - scale int32

        + Do(b Johnny) 

    }
    class SnapshotVisitor << (S,Aquamarine) >> {
        - buffer alpacadecimal.Decimal

        + Do(b Johnny) 
        + Get() alpacadecimal.Decimal

    }
    class Tax << (S,Aquamarine) >> {
        - ratio alpacadecimal.Decimal
        - amount alpacadecimal.Decimal
        - taxable alpacadecimal.Decimal

        + Amount() alpacadecimal.Decimal
        + Ratio() alpacadecimal.Decimal
        + Taxable() alpacadecimal.Decimal

    }
    class TaxHandler << (S,Aquamarine) >> {
        - totalRatio alpacadecimal.Decimal
        - totalAmount alpacadecimal.Decimal
        - taxable alpacadecimal.Decimal

        + WithPercentualTax(value alpacadecimal.Decimal) 
        + WithAmountTax(value alpacadecimal.Decimal) 

    }
    class TaxHandlerFromUnitValue << (S,Aquamarine) >> {
        + Do(b Johnny) 
        + Taxable() alpacadecimal.Decimal
        + TotalRatio() alpacadecimal.Decimal
        + TotalAmount() alpacadecimal.Decimal

    }
    class UnbufferedAmountTax << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class UnbufferedPercTax << (S,Aquamarine) >> {
        + Do(b Johnny) 

    }
    class UnitValue << (S,Aquamarine) >> {
        - qty alpacadecimal.Decimal
        - unitValue alpacadecimal.Decimal

        + Do(b Johnny) 
        + Get() alpacadecimal.Decimal
        + Round(sc int32) 

    }
    class ValueType << (S,Aquamarine) >> {
        + String() string
        + IsPercentual() bool
        + IsAmount() bool

    }
    interface Visitor  {
        + Do( Johnny) 

    }
    class johnny.ValueType << (T, #FF7700) >>  {
    }
}
"johnny.Discount" *-- "johnny.AmountDiscount"
"johnny.Tax" *-- "johnny.AmountTax"
"johnny.Discount" *-- "johnny.AmountUndiscount"
"johnny.Tax" *-- "johnny.AmountUntax"
"johnny.DiscountHandler" *-- "johnny.DiscountHandlerFromUnitValue"
"johnny.Arithmetic" *-- "johnny.Johnny"
"johnny.DefaultJohnny" *-- "johnny.FromBrute"
"johnny.DefaultJohnny" *-- "johnny.FromUnitValue"
"johnny.Tax" *-- "johnny.PercTax"
"johnny.Discount" *-- "johnny.PercentualDiscount"
"johnny.Discount" *-- "johnny.PercentualUndiscount"
"johnny.Tax" *-- "johnny.PercentualUntax"
"johnny.TaxHandler" *-- "johnny.TaxHandlerFromUnitValue"
"johnny.Tax" *-- "johnny.UnbufferedAmountTax"
"johnny.Tax" *-- "johnny.UnbufferedPercTax"

"johnny.Visitor" <|-- "johnny.AmountDiscount"
"johnny.Visitor" <|-- "johnny.AmountTax"
"johnny.Visitor" <|-- "johnny.AmountUndiscount"
"johnny.Visitor" <|-- "johnny.AmountUntax"
"johnny.Arithmetic" <|-- "johnny.DefaultJohnny"
"johnny.Johnny" <|-- "johnny.DefaultJohnny"
"johnny.Visitor" <|-- "johnny.DiscountHandlerFromUnitValue"
"johnny.Visitor" <|-- "johnny.PercTax"
"johnny.Visitor" <|-- "johnny.PercentualDiscount"
"johnny.Visitor" <|-- "johnny.PercentualUndiscount"
"johnny.Visitor" <|-- "johnny.PercentualUntax"
"johnny.Visitor" <|-- "johnny.Qty"
"johnny.Visitor" <|-- "johnny.Round"
"johnny.Visitor" <|-- "johnny.SnapshotVisitor"
"johnny.Visitor" <|-- "johnny.TaxHandlerFromUnitValue"
"johnny.Visitor" <|-- "johnny.UnbufferedAmountTax"
"johnny.Visitor" <|-- "johnny.UnbufferedPercTax"
"johnny.Visitor" <|-- "johnny.UnitValue"

"__builtin__.int8" #.. "johnny.ValueType"
@enduml
